image bug fixed -hopefully..

--- a/src/project.json
+++ b/src/project.json
@@ -3,25 +3,25 @@
         "name": "City Explorer",
         "description": "This website allows users to discover events and places by searching a city. Leveraging the power of two APIs, we fetch comprehensive information about events and places within the specified city.",
         "link": "https://hazalsigic.github.io/project-1/",
-        "image": "../../src/assets/images/CityExplorer.gif"
+        "image": "/images/CityExplorer.gif"
     },
     {
         "name": "Weather Dashboard",
         "description": "This web application has been created for travellers to see the weather outlook for multiple cities and plan a trip accordingly.",
         "link": "https://hazalsigic.github.io/weather-dashboard/",
-        "image": "../../src/assets/images/Weather-dashboard.png"
+        "image": "/images/Weather-dashboard.png"
     },
     {
         "name": "Work Day Planner",
         "description": "The app allows users to add important events to a daily planner and manage time effectively. The planner is divided into one-hour time blocks and each time block is colour-coded depending on the time being past, present or future.",
         "link": "https://hazalsigic.github.io/work-day-scheduler/",
-        "image": "../../src/assets/images/work-day-scheduler.png"
+        "image": "/images/work-day-scheduler.png"
     },
     {
         "name": "Password Generator",
         "description": "An easy way to generate random passwords using JavaScript.",
         "link": "https://hazalsigic.github.io/Password-Generator/",
-        "image": "../../src/assets/images/password-generator.png"
+        "image": "/images/password-generator.png"
     }
 
 ]
